@@ -2,10 +2,7 @@
 <dtml-var manage_tabs>
 
 <p>
-<img src="&dtml-absolute_url;" <dtml-if 
- width>width="&dtml-width;" </dtml-if><dtml-if 
- height>height="&dtml-height;" </dtml-if
- > alt="&dtml-title_or_id;" />
+ <dtml-var tag>
 </p>
 
 <dtml-var manage_page_footer>
